[gd_scene load_steps=6 format=2]

[ext_resource path="res://start-assets/Objects/lever_down.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Lever.gd" type="Script" id=2]
[ext_resource path="res://start-assets/Fonts/font_message.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 12.75 )

[sub_resource type="Animation" id=2]
resource_name = "Bounce"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PressLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 7.99999, 0.125 ),
"update": 0,
"values": [ Vector2( 20, -40 ), Vector2( 20, -50 ) ]
}

[node name="Lever" type="Area2D" groups=["Lever"]]
position = Vector2( 26, 33 )
collision_layer = 256
script = ExtResource( 2 )

[node name="SwitchSprite_OFF" type="Sprite" parent="."]
position = Vector2( 3.5, -3.5 )
scale = Vector2( 0.0112305, 0.0112305 )
texture = ExtResource( 1 )

[node name="SwitchSprite_ON" type="Sprite" parent="."]
visible = false
position = Vector2( 3.5, -3.5 )
scale = Vector2( 0.0112305, 0.0112305 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -4.75 )
shape = SubResource( 1 )

[node name="PressLabel" type="Label" parent="."]
visible = false
margin_left = 15.0
margin_top = -40.0358
margin_right = 24.0
margin_bottom = -29.0358
custom_fonts/font = ExtResource( 3 )
text = "E"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
